Remove broken plugins